--- a/s3_migration/apache.config
+++ b/s3_migration/apache.config
@@ -11,8 +11,26 @@
 
     <Location />
         ProxyPass http://127.0.0.1:10101/
-        ProxyPassReverse /
+        ProxyPassReverse http://127.0.0.1:10101/
     </Location>
 
 
 </VirtualHost>
+
+<VirtualHost *:443>
+	ServerAdmin webmaster@localhost
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+
+	# Possible values include: debug, info, notice, warn, error, crit,
+	# alert, emerg.
+	LogLevel warn
+
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    <Location />
+        ProxyPass http://127.0.0.1:10101/
+        ProxyPassReverse http://127.0.0.1:10101/
+    </Location>
+</VirtualHost>
+
