--- a/s3_migration/apache.config
+++ b/s3_migration/apache.config
@@ -19,6 +19,9 @@
 
 <VirtualHost *:443>
 	ServerAdmin webmaster@localhost
+	
+	SSLEngine On
+	SSLCertificateFile /home/ubuntu/.ssh/server.pem
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 
@@ -32,5 +35,6 @@
         ProxyPass http://127.0.0.1:10101/
         ProxyPassReverse http://127.0.0.1:10101/
     </Location>
+    
 </VirtualHost>
 
