--- a/s3_migration/apache.config
+++ b/s3_migration/apache.config
@@ -18,18 +18,19 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-	ServerAdmin webmaster@localhost
-	
-	SSLEngine On
-	SSLCertificateFile /home/ubuntu/.ssh/server.pem
+        ServerAdmin webmaster@localhost
+        
+        SSLEngine On
+        SSLCertificateFile /home/ubuntu/.ssh/server.pem
+        SSLCertificateKeyFile /home/ubuntu/.ssh/server.key
 
-	ErrorLog ${APACHE_LOG_DIR}/error.log
+        ErrorLog ${APACHE_LOG_DIR}/error.log
 
-	# Possible values include: debug, info, notice, warn, error, crit,
-	# alert, emerg.
-	LogLevel warn
+        # Possible values include: debug, info, notice, warn, error, crit,
+        # alert, emerg.
+        LogLevel warn
 
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     <Location />
         ProxyPass http://127.0.0.1:10101/
