--- a/s3_migration/apache.config
+++ b/s3_migration/apache.config
@@ -21,8 +21,12 @@
         ServerAdmin webmaster@localhost
         
         SSLEngine On
+        SSLCACertificateFile /home/ubuntu/.ssh/ca.pem
         SSLCertificateFile /home/ubuntu/.ssh/server.pem
         SSLCertificateKeyFile /home/ubuntu/.ssh/server.key
+        SSLVerifyClient require
+        SSLVerifyDepth 1
+
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
 
