--- a/ops_scripts/orchestra/install/orchestra.service
+++ b/ops_scripts/orchestra/install/orchestra.service
@@ -6,7 +6,7 @@ PATH=/bin:/usr/bin:/sbin:/usr/sbin
 NAME=orchestra
 DESC="orchestra webservice"
 DEFAULT=/etc/default/$NAME
-RUNDIR=/home/ubuntu/gitroot/pcwag-operations/ops_scripts/orchestra/
+RUNDIR=/home/ubuntu/gitroot/pcawg-operations/ops_scripts/orchestra
 
 if [ `id -u` -ne 0 ]; then
 	echo "You need root privileges to run this script"
@@ -29,7 +29,7 @@ ORCHESTRA_GROUP=ubuntu
 
 # Define other required variables
 PID_FILE=/var/run/$NAME.pid
-DAEMON="/usr/bin/python /home/ubuntu/gitroot/pcwag-operations/ops_scripts/orchestra/management_interface.py"
+DAEMON="/usr/bin/python management_interface.py"
 
 case "$1" in
   start)
