--- a/s3_migration/s3migration.service
+++ b/s3_migration/s3migration.service
@@ -46,7 +46,7 @@ case "$1" in
 	# Start Daemon
 	mkdir $RUNDIR 2> /dev/null
 	sudo chown $S3_USER:$S3_USER $RUNDIR
-	start-stop-daemon --start -d $RUNDIR -b --user "$S3_USER" -c "$S3_USER" --pidfile "$PID_FILE" --exec $DAEMON
+	start-stop-daemon --start -d $RUNDIR -b --user "$S3_USER" -c "$S3_USER" -m --pidfile "$PID_FILE" --exec $DAEMON
 	log_end_msg $?
 	;;		
   stop)
